--- a/src/Components/Tournaments/ParticularTournament.css
+++ b/src/Components/Tournaments/ParticularTournament.css
@@ -1,4 +1,4 @@
-.contenar {
+/* .contenar {
     width: 100%;
     height: auto;
     background-size: cover;
@@ -20,4 +20,4 @@
     display: none;
     background-color: #080808;
 }
-
+ */
